# myDB

./: CMakeLists.txt  note.txt
include/: mydb.h
lib/cmake/GTest/: GTestTargets.cmake
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: mydb.cpp  parser.cpp
tests/: test_mydb.cpp
